changes: code reformat